# ReportesLiquidaciones

./: .env  .env.example  .gitignore  Auditorias.ipynb  COMPARATIVA LIQUIDACIONES.ipynb  Minimos_Adm_Central2022-04.xlsx  Untitled-1.ipynb  Untitled-2.py  comparativa.xlsx  dashboard.py  estadisticas-consultas-web.ipynb  estadisticas-liquidaciones.ipynb  hello.py  liquidaciones-bruto-previsional.ipynb  new-workspace.jupyterlab-workspace  numeros_libres.ipynb  planilla_liquidacion.py  pyproject.toml
.ipynb_checkpoints/: .env-checkpoint  COMPARATIVA LIQUIDACIONES-checkpoint.ipynb  Minimos_RetirosPoliciales2022-04-checkpoint.xlsx  estadisticas-liquidaciones-checkpoint.ipynb
