[project]
name = "liquidaciones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyodbc>=5.2.0",
    "python-decouple>=3.8",
    "reportlab>=4.4.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "xlsxwriter>=3.2.3",
]
